[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "poly-commit"
description = 'lifted elgamal encryption implementation'
version = "0.0.10"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
zkstd = { version = "0.0.10", default-features = false }
ec-pairing = { version = "0.0.10", default-features = false }
bls-12-381 = { version = "0.0.10", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
rand_core = { version="0.6", default-features = false, features = ["getrandom"] }
rayon = "1.5.1"

[features]
default = ["std"]
std = []
